# simplereader

./: README.md
simple-reader/: .cproject  .project  CMakeLists.txt  Makefile
simple-reader/doc/: simple-reader.doxyfile
simple-reader/doc/html/: IPersonCrud_8h.html  IPersonCrud_8h__dep__incl.map  IPersonCrud_8h__dep__incl.md5  IPersonCrud_8h__incl.map  IPersonCrud_8h__incl.md5  IPersonCrud_8h_source.html  ImplPersonCrudPugixml_8hpp.html  ImplPersonCrudPugixml_8hpp__dep__incl.map  ImplPersonCrudPugixml_8hpp__dep__incl.md5  ImplPersonCrudPugixml_8hpp__incl.map  ImplPersonCrudPugixml_8hpp__incl.md5  ImplPersonCrudPugixml_8hpp_source.html  _xE7_x9B_xB8_xE5_x85_xB3_xE8_xB5_x84_xE6_xBA_x90.html  annotated.html  annotated.js  classIPersonCrud-members.html  classIPersonCrud.html  classIPersonCrud.js  classIPersonCrud__inherit__graph.map  classIPersonCrud__inherit__graph.md5  classImplPersonCrudPugixml-members.html  classImplPersonCrudPugixml.html  classImplPersonCrudPugixml.js  classImplPersonCrudPugixml__coll__graph.map  classImplPersonCrudPugixml__inherit__graph.md5  classImplPersonCrudPugixml_a24c52a4754da57f66b2c157504f2d586_cgraph.map  classImplPersonCrudPugixml_a24c52a4754da57f66b2c157504f2d586_cgraph.md5  classImplPersonCrudPugixml_a5a306d301c2b1e385fd39b43646054d3_cgraph.map  classImplPersonCrudPugixml_a5a306d301c2b1e385fd39b43646054d3_cgraph.md5  classImplPersonCrudPugixml_a61f0d6a00f294e2fb9755a209934d187_cgraph.map  (+82 more)
simple-reader/include/: IPersonCrud.h  person.h
simple-reader/src/: CMakeLists.txt
simple-reader/src/contacts/: CMakeLists.txt  main.cpp
(+31 files in other folders)
